# lynix-ca

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1696603381983-8201f032f1631.mjs  vite.config.ts.timestamp-1697638663223-6026de628ac38.mjs
.svelte-kit/: ambient.d.ts
.svelte-kit/output/server/: index.js  manifest-full.js
assets/: app.css
pages/: error.hbs  error.html  fursona.html  index.hbs  index.html  layout.html  reactive-test.html  shock.html
pages/blog/: article.hbs  article.html  index.hbs  index.html
pages/layouts/: layout.html
src/: app.css  app.html  error_types.rs  hooks.ts  main.rs
src/lib/: Alert.svelte  FurImage.svelte  Image.svelte  Navbar.svelte  Post.ts  SvelteImage.d.ts  Waypoint.svelte
src/lib/components/: Alert.svelte  FurImage.svelte  Navbar.svelte
src/optimizer/: lynximage.rs  mod.rs
src/router/: api.rs  root.rs
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/auth/login/: +page.svelte
src/routes/blog/: +page.svelte
src/routes/contact/: +page.svelte
src/routes/fursona/: +page.svelte
src/routes/gallery/: +page.svelte
src/routes/notes/: +page.svelte
src/routes/projects/: +page.svelte
src/routes/status/: +page.svelte
src/utils/: utils.rs
src/views/: fursona.rs  index.rs  mod.rs  shock.rs
src/ws/: ws.rs
static/: app.css  floof.js
static/css/: main.css
static/posts/: why-i-switched-to-svelte.json
test/: main.rs
test/router/: blog.rs  mod.rs  root.rs
(+19 files in other folders)
