[package]
name = "lynix_ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = "0.7.7"
tower-http = { version = "0.4.4", features = ["fs"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["tracing", "io"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.1"
handlebars = "4.4.0"