[package]
name = "lynix_ca"
version = "1.2.74"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-files = "0.6.2"
lazy_static = "1.4.0"
tera = "1.19.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.106"
derive_more = "0.99.17"
